Added the sounds and game reset

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link href="./styles.css" rel="stylesheet">
 </head>
 <body>
-    <h1>Press any key to start</h1>
+    <h1 id="level-title">Press any key to start</h1>
     <div class="gamePlay">
         <div class="box notPressed" id="zero"></div>
         <div class="box notPressed" id="one"></div>
